fix exists with index SERVER-708